--- a/index.html
+++ b/index.html
@@ -678,9 +678,12 @@ content: '';
 
             		<div data-elementor-type="wp-page" data-elementor-id="212" class="elementor elementor-212" data-elementor-post-type="page">
 				<div class="aux-parallax-section elementor-element elementor-element-9bb3a3a e-con-full e-flex e-con e-parent" data-id="9bb3a3a" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;video&quot;,&quot;background_video_start&quot;:0,&quot;shape_divider_bottom&quot;:&quot;opacity-fan&quot;,&quot;background_play_on_mobile&quot;:&quot;yes&quot;,&quot;background_video_link&quot;:&quot;https:\/\/teqni.pulseglint.com\/motion-graphic-of-copy-space-blue-circuits%e2%94%acadigital-background-free-stock-video-footage\/&quot;}">
-		<div class="elementor-background-video-container">
-							<video class="elementor-background-video-hosted" autoplay muted playsinline loop></video>
-					</div>		<div class="elementor-shape elementor-shape-bottom" data-negative="false">
+		<<div class="elementor-background-video-container">
+  <video class="elementor-background-video-hosted" autoplay muted playsinline loop>
+    <source src="videos/bg-video.mp4" type="video/mp4">
+  </video>
+</div>
+		<div class="elementor-shape elementor-shape-bottom" data-negative="false">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 283.5 19.6" preserveAspectRatio="none">
 	<path class="elementor-shape-fill" style="opacity:0.33" d="M0 0L0 18.8 141.8 4.1 283.5 18.8 283.5 0z"/>
 	<path class="elementor-shape-fill" style="opacity:0.33" d="M0 0L0 12.6 141.8 4 283.5 12.6 283.5 0z"/>
