--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ content: '';
 				<div class="aux-parallax-section elementor-element elementor-element-9bb3a3a e-con-full e-flex e-con e-parent" data-id="9bb3a3a" data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;video&quot;,&quot;background_video_start&quot;:0,&quot;shape_divider_bottom&quot;:&quot;opacity-fan&quot;,&quot;background_play_on_mobile&quot;:&quot;yes&quot;,&quot;background_video_link&quot;:&quot;https:\/\/teqni.pulseglint.com\/motion-graphic-of-copy-space-blue-circuits%e2%94%acadigital-background-free-stock-video-footage\/&quot;}">
 		<<div class="elementor-background-video-container">
   <video class="elementor-background-video-hosted" autoplay muted playsinline loop>
-    <source src="videos/bg-video.mp4" type="video/mp4">
+    <source src="video/bg-video.mp4" type="video/mp4">
   </video>
 </div>
 		<div class="elementor-shape elementor-shape-bottom" data-negative="false">
