--- a/index.html
+++ b/index.html
@@ -1328,6 +1328,19 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 <script src="./js/frontend.min.js" id="elementor-frontend-js"></script>
 <script src="./js/elements-handlers.min.js" id="pro-elements-handlers-js"></script>
 <!-- end wp_footer -->
+	<script>
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute('href'));
+      if (target) {
+        target.scrollIntoView({
+          behavior: 'smooth'
+        });
+      }
+    });
+  });
+</script>
 </body>
 </html>
 
