--- a/index.html
+++ b/index.html
@@ -628,26 +628,29 @@ content: '';
 		</li>
 		<!-- end single menu -->
 		<!-- start single menu -->
-		<li id="menu-item-441" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-441 aux-menu-depth-0 aux-menu-root-2 aux-menu-item">
-			<a href="" class="aux-item-content">
-				<span class="aux-menu-label">من نحن</span>
-			</a>
-		</li>
-		<!-- end single menu -->
-		<!-- start single menu -->
-		<li id="menu-item-442" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-442 aux-menu-depth-0 aux-menu-root-3 aux-menu-item">
-			<a href="" class="aux-item-content">
-				<span class="aux-menu-label">خدماتنا</span>
-			</a>
-		</li>
-		<!-- end single menu -->
-		<!-- start single menu -->
-		<li id="menu-item-443" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-443 aux-menu-depth-0 aux-menu-root-4 aux-menu-item">
-			<a href="" class="aux-item-content">
-				<span class="aux-menu-label">تواصل معنا</span>
-			</a>
-		</li>
-		<!-- end single menu -->
+<li id="menu-item-441" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-441 aux-menu-depth-0 aux-menu-root-2 aux-menu-item">
+    <a href="#about" class="aux-item-content">
+        <span class="aux-menu-label">من نحن</span>
+    </a>
+</li>
+<!-- end single menu -->
+
+<!-- start single menu -->
+<li id="menu-item-442" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-442 aux-menu-depth-0 aux-menu-root-3 aux-menu-item">
+    <a href="#services" class="aux-item-content">
+        <span class="aux-menu-label">خدماتنا</span>
+    </a>
+</li>
+<!-- end single menu -->
+
+<!-- start single menu -->
+<li id="menu-item-443" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-443 aux-menu-depth-0 aux-menu-root-4 aux-menu-item">
+    <a href="#contact" class="aux-item-content">
+        <span class="aux-menu-label">تواصل معنا</span>
+    </a>
+</li>
+<!-- end single menu -->
+
 	</ul>
 
 </nav>
